--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.0"
   }
 }
