--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "html-loader": "^0.4.5",
+    "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
