--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "html-loader": "^0.4.5",
+    "json-loader": "^0.5.4",
     "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
+    "mongoose": "^4.9.2",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
