--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
