--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-tag-input": "^4.6.2"
   }
 }
