--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch server --exec babel-node server/index.js --ignore public/"
+    "start": "nodemon --watch server --watch sass --exec babel-node server/index.js --ignore public/"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
     "mongoose": "^4.9.2",
+    "node-sass-middleware": "^0.11.0",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
