--- a/package.json
+++ b/package.json
@@ -41,14 +41,15 @@
     "express": "^4.15.2",
     "html-loader": "^0.4.5",
     "json-loader": "^0.5.4",
+    "katex": "^0.7.1",
     "markdown-loader": "^2.0.0",
-    "marked": "^0.3.6",
     "mongoose": "^4.9.2",
     "node-sass-middleware": "^0.11.0",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.0",
-    "react-tag-input": "^4.6.2"
+    "react-tag-input": "^4.6.2",
+    "remarkable": "^1.7.1"
   }
 }
