--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "json-loader": "^0.5.4",
     "katex": "^0.7.1",
     "markdown-loader": "^2.0.0",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.2",
     "node-sass-middleware": "^0.11.0",
     "prismjs": "^1.6.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.6.1",
+    "react-datepicker": "^0.52.0",
+    "react-dom": "^15.6.1",
     "react-router": "^3.0.0",
     "react-tag-input": "^4.6.2",
     "remarkable": "^1.7.1"
