--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "markdown-loader": "^2.0.0",
     "moment": "^2.18.1",
     "mongoose": "^4.9.2",
+    "multer": "^1.3.0",
     "node-sass-middleware": "^0.11.0",
     "prismjs": "^1.6.0",
     "react": "^15.6.1",
     "react-datepicker": "^0.52.0",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^3.13.4",
     "react-router": "^3.0.0",
     "react-tag-input": "^4.6.2",
     "remarkable": "^1.7.1"
