--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dropzone": "^3.13.4",
     "react-router": "^3.0.0",
     "react-tag-input": "^4.6.2",
+    "react-tagsinput": "^3.17.0",
     "remarkable": "^1.7.1"
   }
 }
