--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch server --watch sass --exec babel-node server/index.js --ignore public/"
+    "dev": "nodemon --watch server --watch sass --exec babel-node server/index.js --ignore public/",
+    "start": "babel-node server/index.js"
   },
   "repository": {
     "type": "git",
