seperate dev and deploy version

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch server --watch sass --exec babel-node server/index.js --ignore public/",
-    "start": "babel-node server/index.js"
+    "dev": "nodemon --watch server --watch sass --exec babel-node server-dev.js --ignore public/",
+    "bundle": "webpack --config webpack.config.js",
+    "prestart": "npm run bundle"
   },
   "repository": {
     "type": "git",
