user id change and upload avatar.JPG

--- a/.gitignore
+++ b/.gitignore
@@ -45,10 +45,9 @@ public/css
 
 # Images
 server/media
-public/img
-public/css/backend.css
-public/css/common.css
-public/css/frontend.css
+public/img/*
+public/css
+!public/img/avatar.JPG
 
 # solr
 solr-6.5.0
